--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,11 @@ rust:
 
 # Install libusb in MacOS X
 before_install:
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-    brew update;
-    brew install libusb;
+  - |
+      if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      brew update;
+      brew install libusb;
+      fi
 
 # Load travis-cargo
 before_script:
