--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ keywords = ["arm", "sunxi", "allwinner", "fel"]
 categories = ["embedded"]
 
 [dependencies]
-error-chain = "0.9"
-libusb = "0.3"
-byteorder = "1.0"
+failure =  "0.1.1"
+libusb = "0.3.0"
+byteorder = "1.2.3"
 
 [features]
 default = ["uboot"]
