--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ addons:
       - libelf-dev
       - libdw-dev
       - binutils-dev
-      - libusb-dev
       - libusb-1.0-0
+      - libusb-1.0-0-dev
       - pkg-config
 
 # Run builds for all the supported trains
@@ -22,14 +22,6 @@ rust:
   - beta
   - stable
   - 1.26.2
-
-# Install libusb in MacOS X
-before_install:
-  - |
-      if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew update;
-      brew install libusb;
-      fi
 
 # Load travis-cargo
 before_script:
