--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "aw-fel"
 version = "0.4.1"
 authors = ["Razican <razican@protonmail.ch>"]
+edition = "2018"
 license = "MIT/Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/Razican/aw-fel-rs"
@@ -15,7 +16,7 @@ categories = ["embedded"]
 [dependencies]
 failure = "0.1.3"
 libusb = "0.3.0"
-byteorder = "1.2.6"
+byteorder = "1.2.7"
 
 [features]
 default = ["uboot"]
