--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ categories = ["embedded"]
 
 [badges]
 travis-ci = { repository = "Razican/aw-fel-rs", branch = "master" }
-appveyor = { repository = "Razican/aw-fel-rs", branch = "master", service = "github" }
 codecov = { repository = "Razican/aw-fel-rs", branch = "master", service = "github" }
 is-it-maintained-issue-resolution = { repository = "Razican/aw-fel-rs" }
 is-it-maintained-open-issues = { repository = "Razican/aw-fel-rs" }
+maintenance = { status = "passively-maintained" }
 
 [dependencies]
 failure = "0.1.3"
